# tower-lsp-template

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lsp.rs  main.rs
