[package]
name = "pyls-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.1"
ropey = "1.6.1"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0.196", features = ["derive"] }
dashmap = "5.5.3"
log = "0.4.20"
rustpython-parser = "0.3.0"


